[package]
name = "experiences_navigator"
version = "0.1.0"
edition = "2021"

[lib]
name = "experiences_navigator_lib"
path = "src/lib.rs"

[build-dependencies]
stylers = { version = "1.0.0-alpha" }

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
reqwest = "0.12.5"
leptos-use = "0.12.0"
web-sys = { version = "0.3.69", features = ["HtmlDocument", "ResizeObserver"] }
stylers = { version = "1.0.0-alpha" }
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
url = "2.5.2"
experiences_types = { path = "../experiences_types", features = ["client"] }
timeline_types = { path = "../timeline_types" }
