[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
url = { version = "2.5.2", features = ["serde"] }

[build-dependencies]
stylers = { version = "1.0.0-alpha" }