[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr", "nightly"] }
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
stylers = { version = "1.0.0-alpha" }
url = { version = "2.5.2", features = ["serde"] }
web-sys = { version = "0.3.69", features = ["TouchList", "TouchEvent", "Touch", "HtmlDocument"] }
shared = {path = "../shared", features = ["client"]}

[build-dependencies]
stylers = { version = "1.0.0-alpha" }
