[package]
name = "experiences_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr", "nightly"] }
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
stylers = { version = "1.0.0-alpha" }
url = { version = "2.5.2", features = ["serde"] }
web-sys = { version = "0.3.69", features = [
  "TouchList",
  "TouchEvent",
  "Touch",
  "HtmlDocument",
  "ResizeObserver",
] }
shared = { path = "../shared", features = ["client"] }
console_error_panic_hook = "0.1.7"
leptos-use = "0.12.0"
experiences_navigator = { path = "../experiences_navigator" }
timeline_types = { path = "../timeline_types" }
link = { path = "../link", features = ["client"] }

[build-dependencies]
stylers = { version = "1.0.0-alpha" }
