[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

[dependencies]
raqote = "0.8.4"
rand = "0.8.5"
image = "0.25.2"
timeline_types = { path = "../timeline_types" }
toml = "0.8.10"
serde = "1.0.197"
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
shared = { path = "../shared", features = ["server"] }
chrono = { version = "0.4.34", features = ["serde"] }
