[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"
path = "src/lib.rs"

[features]
server = ["dep:tokio"]
client = []

[dependencies]
tokio = { version = "1.36.0", features = ["full"], optional = true }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
experiences_types = { path = "../experiences_types" }
timeline_types = { path = "../timeline_types/" }
